fix: update description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gf-landing",
   "private": true,
-  "description": "Landing Page - GF Refrigeração",
+  "description": "Serviços de instalação, manutenção e conserto de ar-condicionado, geladeiras, máquinas de lavar e lava-louças com atendimento rápido e de qualidade.",
   "version": "0.1.0",
   "author": "Ailton Loures <ailton.loures99@gmail.com>",
   "bugs": {
