--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "semi": true,
+  "singleQuote": true,
+  "quoteProps": "consistent",
+  "trailingComma": "es5",
+  "endOfLine": "auto",
+  "useTabs": true,
+  "tabWidth": 4,
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "arrowParens": "always",
+  "printWidth": 120
 }
