--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
